@@ -15,6 +15,8 @@
 * Added --dataset option to harpdump and changed output format of
   harp_dataset_print() and harp_product_metadata_print() to csv format.
 
+* Added 'operations' parameter to Python harp.export_product() function.
+
 * Fixed issue where harpmerge did not introduce a time dimension for all
   variables.
 
